--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World ihr Wichser</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Laura ist ein Bengel Engel</h1>
+<p>und pupst gerne</p>
 </body>
 </html>
