--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<head>
+<link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico">
+</head>
 <html>
 <body>
 <h1>Laura ist ein Bengel Engel</h1>
