--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <html>
 <body>
-<body bgcolor="#CCFFFF">
+<body bgcolor="#000000">
 <h1>Laura ist ein Bengel Engel</h1>
 <p>und pupst gerne</p>
 </body>
