--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
 <html>
 <body>
 <body bgcolor="#000000">
-<h1>Laura ist ein Bengel Engel</h1>
-<p>und pupst gerne</p>
+<style>
+      p { margin-top: 3em; }
+      <h1 style="font-size:28px">Überschrift</h1>
+      <span style="color:white"> Weiße Schrift </span>
+    </style>
+  </head>
+  <body>
+    <h1>Verwendung von <code>margin-top</code></h1>
+    <main>
+      <p>amygdala_amara
+      </p>
 </body>
 </html>
