--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
 <html>
 <body>
 <body bgcolor="#000000">
-<style>
-      p { margin-top: 3em; }
-      <h1 style="font-size:28px">Überschrift</h1>
-      <span style="color:white"> Weiße Schrift </span>
-    </style>
+<span><span style="font-size:16px"><span style="color:white">amygdala_amara</span></span> 
+<style>p{margin-top:3em;}</style>
   </head>
   <body>
     <h1>Verwendung von <code>margin-top</code></h1>
