--- a/index.html
+++ b/index.html
@@ -3,25 +3,15 @@
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/mstile-144x144.png">
-.h1 { margin-top: 1000%; }
+<p style="visibility:hidden">.h1 { margin-top: 1000%; }
 .h2 { margin-top: 1000%; }
 .h3 { margin-top: 1000%; }
-.h4 { margin-top: 1000%; }
+.h4 { margin-top: 1000%; }</p>
 </head>
 <html>
 <body>
-<h4>
-{ margin-top: 10px; }
-</h4>
-<h3>
-{ margin-top: 10px; }
-</h3>
-<h2>
-{ margin-top: 10px; }
-</h2>
-<h1>
-{ margin-top: 10px; }
-<span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>amygdala_amara</center></h1>
+<h4 style="visibility:hidden">{ margin-top: 10px; }</p></h4><h3 style="visibility:hidden">{ margin-top: 10px; }</h3><h2 style="visibility:hidden">{ margin-top: 10px; }</h2><h5 style="visibility:hidden">{ margin-top: 10px; }</h5>
+<h1><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>amygdala_amara</center></h1>
 <body bgcolor="#000000">
 </body>
 </html>
