--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 <p style="visibility:hidden">.h1 { margin-top: 1000%; }
 .h2 { margin-top: 1000%; }
-.h3 { margin-top: 1000%; }
-.h4 { margin-top: 1000%; }</p>
+</p>
 <style>
 img {
   display: block;
@@ -17,7 +16,7 @@ img {
 </head>
 <html>
 <body>
-<h4 style="visibility:hidden">{ margin-top: 10px; }</p></h4><h3 style="visibility:hidden">{ margin-top: 10px; }</h3><h2 style="visibility:hidden">{ margin-top: 10px; }</h2><h5 style="visibility:hidden">{ margin-top: 10px; }</h5>
+<h2 style="visibility:hidden">{ margin-top: 10px; }</h2><h5 style="visibility:hidden">{ margin-top: 10px; }</h5>
 <h1><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>amygdala_amara</center></h1>
 <img src="FullSizeRender.jpg" alt="…" width="600" height="400">
 <body bgcolor="#000000">
