--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
 .h2 { margin-top: 1000%; }
 </p>
 <style>
+    <meta charset="utf-8">
+    <title>margin-right</title>
+      span { margin-right: 5em; background-color: red; }
 img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   }
+a{
+color:#00FF00;
+text-decoration:none;
+font-family: 'Courier New',Arial;
+font-size: 16px;
+font-weight: lighter;
+}
   </style>
 </head>
 <html>
@@ -19,6 +29,11 @@ img {
 <h2 style="visibility:hidden">{ margin-top: 10px; }</h2><h5 style="visibility:hidden">{ margin-top: 10px; }</h5>
 <h1><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>amygdala_amara</center></h1>
 <img src="FullSizeRender.jpg" alt="…" width="600" height="400">
+<p><center><a href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber"> youtube} </a>
+<a href="https://soundcloud.com/amygdala_amara"> /soundcloud/ </a>
+<a href="https://www.facebook.com/amygdalaamaramusic/"> _facebook </a>
+<a href="https://www.instagram.com/amygdala_amara/"> "instagram" </a>
+<a href="https://twitter.com/amygdalaamara"> twitter:12px </a></center></p>
 <body bgcolor="#000000">
 </body>
 </html>
