--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/mstile-144x144.png">
-<p style="visibility:hidden">.h1 { margin-top: 1000%; }
+<p style="visibility:hidden">
 .h2 { margin-top: 1000%; }
 </p>
 <style>
@@ -26,8 +26,7 @@ font-weight: lighter;
 </head>
 <html>
 <body>
-<h2 style="visibility:hidden">{ margin-top: 10px; }</h2><h5 style="visibility:hidden">{ margin-top: 10px; }</h5>
-<h1><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>amygdala_amara</center></h1>
+<h2 style="visibility:hidden">{ margin-top: 10px; }</h2><h1><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>amygdala_amara</center></h1>
 <img src="FullSizeRender.jpg" alt="…" width="600" height="400">
 <p><center><a href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber"> youtube} </a>
 <a href="https://soundcloud.com/amygdala_amara"> /soundcloud/ </a>
