--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@ img {
   margin-left: auto;
   margin-right: auto;
   }
-a{
+a {
 color:#00FF00;
 text-decoration:none;
 font-family: 'Courier New',Arial;
 font-size: 16px;
 font-weight: lighter;
 }
+/* mouse over link */
+a:hover {
+  color: #A9BCF5;
+  font-family: 'Arial';
+}
+
   </style>
 </head>
 <html>
