--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ div.absolute {
 <a href="https://www.facebook.com/amygdalaamaramusic/"> _facebook </a>
 <a href="https://www.instagram.com/amygdala_amara/"> "instagram" </a>
 <a href="https://twitter.com/amygdalaamara"> twitter:12px </a></center></p>
-<div class="absolute"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">contact: amygdala_amara@gmx.de</div>
+<div class="absolute"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">requests:<br>contact@amygdala-amara.de</div>
 <body bgcolor="#000000">
 </body>
 </html>
