--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ div.absolute {
 <html>
 <body>
 <h2 style="visibility:hidden">{ margin-top: 10px; }</h2><h1><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>amygdala_amara</center></h1>
-<img src="FullSizeRender.jpg" alt="…" width="600" height="400">
+<img src="sweetdemon.jpg" alt="…" width="655" height="356">
 <p><center><a href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber"> youtube} </a>
 <a href="https://soundcloud.com/amygdala_amara"> /soundcloud/ </a>
 <a href="https://www.facebook.com/amygdalaamaramusic/"> _facebook </a>
