--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@ div.absolute {
   left: 15px;
   width: 200px;
 }
+
+div.wrapper {
+  position: absolute;
+  right: 0px;
+  bottom: 1px;
+}
+
+
 </style>
 </head>
 <html>
@@ -45,10 +53,11 @@ div.absolute {
 <img src="sweetdemon.jpg" alt="…" width="655" height="356">
 <p><center><a href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber"> youtube} </a>
 <a href="https://soundcloud.com/amygdala_amara"> /soundcloud/ </a>
-<a href="https://www.facebook.com/amygdalaamaramusic/"> _facebook </a>
+<a href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF"> _spotify </a>
 <a href="https://www.instagram.com/amygdala_amara/"> "instagram" </a>
 <a href="https://twitter.com/amygdalaamara"> twitter:12px </a></center></p>
 <div class="absolute"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">requests:<br>contact@amygdala-amara.de</div>
 <body bgcolor="#000000">
 </body>
 </html>
+<div class="wrapper"="absolute"><iframe src="https://open.spotify.com/embed/artist/5ow5XVwCOfNy3rifz6KSoF" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></div>
