--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@ div.wrapper {
 <body>
 <h2 style="visibility:hidden">{ margin-top: 10px; }</h2><h1><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>amygdala_amara</center></h1>
 <img src="sweetdemon.jpg" alt="…" width="655" height="356">
-<p><center><a href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber"> youtube} </a>
+<p><center><a href="https://ffm.to/amygdala_amara"> _NEW SONG </a>
 <a href="https://soundcloud.com/amygdala_amara"> /soundcloud/ </a>
-<a href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF"> _spotify </a>
+<a href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber"> youtube} </a>
+<a href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF"> spotify:12px </a>
 <a href="https://www.instagram.com/amygdala_amara/"> "instagram" </a>
-<a href="https://twitter.com/amygdalaamara"> twitter:12px </a></center></p>
+</center></p>
 <div class="absolute"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">requests:<br>contact@amygdala-amara.de</div>
 <body bgcolor="#000000">
 </body>
