--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ img {
   margin-left: auto;
   margin-right: auto;
   }
-a {
+a.one {
 color:#00FF00;
 text-decoration:none;
 font-family: 'Courier New',Arial;
@@ -35,7 +35,7 @@ div.absolute {
   position: absolute;
   bottom: 17px;
   left: 15px;
-  width: 200px;
+  width: 400px;
 }
 
 div.wrapper {
@@ -44,6 +44,18 @@ div.wrapper {
   bottom: 1px;
 }
 
+a.two {
+color:#00FF00;
+text-decoration:none;
+font-family: 'Courier New',Arial;
+font-size: 12px;
+font-weight: lighter;
+}
+/* mouse over link */
+a:hover {
+  color: #A9BCF5;
+  font-family: 'Arial';
+}
 
 </style>
 </head>
@@ -51,13 +63,13 @@ div.wrapper {
 <body>
 <h2 style="visibility:hidden">{ margin-top: 10px; }</h2><h1><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>amygdala_amara</center></h1>
 <img src="sweetdemon.jpg" alt="…" width="655" height="356">
-<p><center><a href="https://ffm.to/amygdala_amara"target="_blank"> _NEW SONG </a>
-<a href="https://soundcloud.com/amygdala_amara"target="_blank"> /soundcloud/ </a>
-<a href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber"target="_blank"> youtube} </a>
-<a href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF"target="_blank"> spotify:12px </a>
-<a href="https://www.instagram.com/amygdala_amara/"target="_blank"> "instagram" </a>
+<p><center><<a class="one" href="https://ffm.to/amygdala_amara"target="_blank"> _NEW SONG </a>
+<a class="one" href="https://soundcloud.com/amygdala_amara"target="_blank"> /soundcloud/ </a>
+<a class="one" href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber"target="_blank"> youtube} </a>
+<a class="one" href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF"target="_blank"> spotify:12px </a>
+<a class="one" href="https://www.instagram.com/amygdala_amara/"target="_blank"> "instagram" </a>
 </center></p>
-<div class="absolute"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">requests:<br>contact@amygdala-amara.de</div>
+<div class="absolute"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">requests:<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a></div>
 <body bgcolor="#000000">
 </body>
 </html>
