--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ a:hover {
 <body>
 <h2 style="visibility:hidden">{ margin-top: 10px; }</h2><h1><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>amygdala_amara</center></h1>
 <img src="sweetdemon.jpg" alt="…" width="655" height="356">
-<p><center><<a class="one" href="https://ffm.to/amygdala_amara"target="_blank"> _NEW SONG </a>
+<p><center><a class="one" href="https://ffm.to/amygdala_amara"target="_blank"> _NEW SONG </a>
 <a class="one" href="https://soundcloud.com/amygdala_amara"target="_blank"> /soundcloud/ </a>
 <a class="one" href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber"target="_blank"> youtube} </a>
 <a class="one" href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF"target="_blank"> spotify:12px </a>
