--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@ a:hover {
   font-family: 'Arial';
 }
 
-  </style>
-  <style>
-
 div.absolute {
   position: absolute;
   bottom: 17px;
@@ -60,14 +57,14 @@ a:hover {
 iframe  {
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
-}
+ }
 
 </style>
 </head>
 <html>
 <body>
 <h2 style="visibility:hidden">{ margin-top: 10px; }</h2><h1><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>amygdala_amara</center></h1>
-<img src="sweetdemon.jpg" alt="…" width="655" height="356">
+<img src="sweetdemon4.png" alt="…" width="640" height="358">
 <p><center><a class="one" href="https://ffm.to/amygdala_amara"target="_blank"> _NEW SONG </a>
 <a class="one" href="https://soundcloud.com/amygdala_amara"target="_blank"> /soundcloud/ </a>
 <a class="one" href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber"target="_blank"> youtube} </a>
