--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@ a:hover {
   font-family: 'Arial';
 }
 
+iframe  {
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
+ }
+ 
 </style>
 </head>
 <html>
