--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@ a:hover {
 div.absolute {
   position: absolute;
   bottom: 17px;
-  left: 15px;
+  right: 15px;
   width: 400px;
+  text-align: right;
 }
 
 a.two {
@@ -47,6 +48,16 @@ a:hover {
   color: #A9BCF5;
   font-family: 'Arial';
 }
+
+div.lyrics {
+width:      100%;
+  height:     100%; 
+  z-index:    10;
+  top:        0; 
+  left:       0; 
+  position:   fixed; 
+}
+
 
 </style>
 </head>
@@ -64,6 +75,79 @@ a:hover {
 </center></p>
 <h2><span style="font-size:13px"><span style="color:#4e23ff"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>new single "We Can't Be the Judged Ones, If There's No One to Judge Us" out on 06/26 </center></h2>
 <div class="absolute"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">requests:<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a></div>
+<div class= "lyrics"><marquee height="100%" direction="down"> <span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">
+<div style="text-indent:10px;">h1.verse1{</div>
+cut;<br>
+your throat by my tongue;<br>
+you got sober lungs;<br>
+and i make you feel;<br>
+
+<div style="text-indent:10px;">the highs and then the palest lows;</div>
+i lift you up; i punch you down;<br>
+baby;<br>
+}<br>
+<div style="text-indent:10px;">h1.bridge1{</div>
+tender boy, make me feel you leave;<br> 
+i cry two oceans, you traverse them for me;<br>
+and when you just swim fast enough;<br>
+my holy hand will rise;<br>
+}<br>
+<div style="text-indent:10px;">h1.chorus{</div>          
+when i take your mind;<br>
+and i make it mine;<br>
+
+<div style="text-indent:10px;">cause I heard what you said;</div>
+to the girl that you met;<br>
+
+<div style="text-indent:10px;">if you fight back, if you, you fight back;</div>
+boy boy;<br>
+
+<div style="text-indent:10px;">then I come around;</div> 
+at your mama’s house;<br>
+on your safest ground;<br>
+
+<div style="text-indent:10px;">and I will defend;</div>
+
+<div style="text-indent:10px;">back up!;</div>
+} <br>
+<div style="text-indent:10px;">h1.verse2{</div>
+my hands;<br>
+to forget everything;<br>
+they just toughed heaven;<br> 
+and they toughed your skin;<br>
+
+<div style="text-indent:10px;">deepthroat your feelings in a fight;</div>
+save ‘em in mind for better times;<br>
+i bought you flowers;<br>
+
+<div style="text-indent:10px;">what if we both just have like a chill night … together … watching them die?;</div>
+wouldn’t that be romantic?;<br>
+} <br>
+<div style="text-indent:10px;">h1.bridge2{</div>
+tender boy, make me feel you leave; <br>
+i burn the ground and you get burned by me;<br>
+and on a good day, if i feel like it;<br>
+my holy hand will rise;<br>
+} <br>
+<div style="text-indent:10px;">h1.chorus{</div>
+when i take your mind;<br> 
+and i make it mine;<br>
+
+<div style="text-indent:10px;">cause I heard what you said;</div>
+to the girl that you met;<br> 
+
+<div style="text-indent:10px;">if you fight back, if you, you fight back;</div>
+boy boy;<br>
+
+<div style="text-indent:10px;">then I come around;</div> 
+at your mama’s house;<br>
+on your safest ground;<br>
+
+<div style="text-indent:10px;">and i will defend;</div>
+
+<div style="text-indent:10px;">back up!;</div>
+}<br>
+</marquee></div>
 <body bgcolor="#000000">
 </body>
 </html>
