--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@ font-size: 16px;
 font-weight: lighter;
 }
 /* mouse over link */
-a:hover {
-  color: #A9BCF5;
-  font-family: 'Arial';
+a.one:hover {
+  color: #4e23ff;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 16px;
+  font-weight: lighter;
 }
 
 div.absolute {
@@ -44,9 +47,12 @@ font-size: 12px;
 font-weight: lighter;
 }
 /* mouse over link */
-a:hover {
-  color: #A9BCF5;
-  font-family: 'Arial';
+a.two:hover {
+  color: #4e23ff;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
 }
 
 div.lyrics {
@@ -66,7 +72,7 @@ width:      100%;
 <body>
 <h2 style="visibility:hidden">{ margin-top: 10px; }</h2><h1><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>amygdala_amara</center></h1>
 <img src="sweetdemon12.png" alt="…" width="640" height="358">
-<p><center><a class="one" href="https://ffm.to/amygdala_amara"target="_blank"> _NEW SONG </a>
+<p><center><a class="one" href="https://ffm.to/amygdala_amara"target="_blank"> _NEW SONG </a> 
 <a class="one" href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF"target="_blank"> spotify:12px </a>
 <a class="one" href="https://music.apple.com/de/artist/amygdala-amara/1513588735"> apple music; </a>
 <a class="one" href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber"target="_blank"> youtube} </a>
@@ -74,7 +80,7 @@ width:      100%;
 
 <a class="one" href="https://www.instagram.com/amygdala_amara/"target="_blank"> 'instagram' </a>
 </center></p>
-<h2><span style="font-size:13px"><span style="color:#4e23ff"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>new single "We Can't Be the Judged Ones, If There's No One to Judge Us" out on 06/26 </center></h2>
+<h2><span style="font-size:13px"><span style="color:#4e23ff"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>new single "We Can't Be the Judged Ones, If There's No One to Judge Us" out on 06/26 <br> --> pre-save! <-- </center></h2>
 <div class="absolute"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">requests:<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a></div>
 <div class= "lyrics"><marquee height="100%" direction="down"> <span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">
 <div style="text-indent:10px;">h1.verse1{</div>
