--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/mstile-144x144.png">
-<p style="visibility:hidden">
-.h2 { margin-top: 1000%; }
-</p>
+
 <style>
-    <meta charset="utf-8">
-    <title>margin-right</title>
-      span { margin-right: 5em; background-color: red; }
-img {
+img.profilbild {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -64,24 +59,84 @@ width:      100%;
   position:   fixed; 
   pointer-events: none;
 }
-
-
+  
+  img.youtube {
+  top: 17px;
+  right: 15px;
+  opacity: 1;
+position:   absolute; 
+  }
+  
+  img.soundcloud {
+  top: 47px;
+  right: 15px;
+  opacity: 1;
+position:   absolute; 
+  }
+  
+  img.instagram {
+  top: 87px;
+  right: 15px;
+  opacity: 1;
+position:   absolute; 
+  }
+  
+  img.facebook {
+  top: 127px;
+  right: 15px;
+  opacity: 1;
+position:   absolute; 
+  }
+  
+  img.twitter {
+  top: 167px;
+  right: 15px;
+  opacity: 1;
+position:   absolute; 
+  }
+  
+  img.twitch {
+  top: 207px;
+  right: 15px;
+  opacity: 1;
+position:  absolute; 
+  }
+  
 </style>
 </head>
 <html>
 <body>
+
+<p style="visibility:hidden">
+Hello, you
+</p>
+
 <h2 style="visibility:hidden">{ margin-top: 10px; }</h2><h1><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>amygdala_amara</center></h1>
-<img src="sweetdemon12.png" alt="…" width="640" height="358">
+
+<img class="profilbild" src="sweetdemon12.png" alt="…" width="640" height="358">
+
 <p><center><a class="one" href="https://ffm.to/amygdala_amara"target="_blank"> _NEW SONG </a> 
 <a class="one" href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF"target="_blank"> spotify:12px </a>
 <a class="one" href="https://music.apple.com/de/artist/amygdala-amara/1513588735"> apple music; </a>
 <a class="one" href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber"target="_blank"> youtube} </a>
 <a class="one" href="https://soundcloud.com/amygdala_amara"target="_blank"> /soundcloud/ </a>
-
 <a class="one" href="https://www.instagram.com/amygdala_amara/"target="_blank"> 'instagram' </a>
 </center></p>
-<h2><span style="font-size:13px"><span style="color:#4e23ff"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>new single "We Can't Be the Judged Ones, If There's No One to Judge Us" out on 06/26 <br> --> pre-save! <-- </center></h2>
+
+<h2><span style="font-size:13px"><span style="color:#4e23ff"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>new single "We Can't Be the Judged Ones, If There's No One to Judge Us" out on 06/26 <br> 
+--> pre-save! <-- </center></h2>
+
+<a class="three" href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber"target="_blank"><img class="youtube" src="youtube.png" width="30" height="30"></a>
+<a class="three" href="https://soundcloud.com/amygdala_amara"target="_blank"><img class="soundcloud" src="soundcloud.png"  width="30" height="30"></a>
+<a class="three" href="https://www.instagram.com/amygdala_amara/"target="_blank"><img class="instagram" src="instagram.png" width="30" height="30"></a>
+<a class="three" href="https://www.facebook.com/amygdalaamaramusic/"target="_blank"><img class="facebook" src="facebook.png" width="30" height="30"></a>
+<a class="three" href="https://twitter.com/amygdalaamara"target="_blank"><img class="twitter" src="twitter.png"  width="30" height="30"></a>
+<a class="three" href="https://www.twitch.tv/amygdala_amara"target="_blank"><img class="twitch" src="twitch.png"  width="30" height="30"></a>
+
 <div class="absolute"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">requests:<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a></div>
+
+
+
 <div class= "lyrics"><marquee height="100%" direction="down"> <span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">
 <div style="text-indent:10px;">h1.verse1{</div>
 cut;<br>
