--- a/index.html
+++ b/index.html
@@ -50,6 +50,22 @@ a.two:hover {
   font-weight: lighter;
 }
 
+a.four {
+color:#4e23ff;
+text-decoration:none;
+font-family: 'Courier New',Arial;
+font-size: 13px;
+font-weight: lighter;
+}
+/* mouse over link */
+a.four:hover {
+  color: #00FF00;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 13px;
+  font-weight: lighter;
+}
+
 div.lyrics {
 width:      100%;
   height:     100%; 
@@ -194,7 +210,7 @@ Hello, you
 </center></p>
 
 <h2><span style="font-size:13px"><span style="color:#4e23ff"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>new single "We Can't Be the Judged Ones, If There's No One to Judge Us" out on 06/26 <br> 
---> pre-save! <-- </center></h2>
+--><a class="four" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"> pre-save! </a><-- </center></h2>
 
 <a class="three" href="https://www.youtube.com/channel/UCZ3Q6Jyo-1jtmnjm7v7ZOdg?view_as=subscriber"target="_blank"><img class="youtube" src="youtube.png" width="30" height="30"></a>
 <a class="three" href="https://soundcloud.com/amygdala_amara"target="_blank"><img class="soundcloud" src="soundcloud.png"  width="30" height="30"></a>
