--- a/index.html
+++ b/index.html
@@ -179,10 +179,9 @@ a.two:hover {
 }
 
 .centered2 {
-  position: relative;
+  position: absolute;
   top: 78%;
-  left: 50%;
-  transform: translate(-50%, -1000%);
+  left: 25%;
 }
 
 a.one {
@@ -203,10 +202,9 @@ a.one:hover {
 
 
 .centered3 {
-  position: relative;
-  top: 95%;
-  left: 50%;
-  transform: translate(-50%, -650%);
+  position: absolute;
+  top: 90%;
+  left: 25%;
 }
 
 a.four {
