--- a/girlinred.html
+++ b/girlinred.html
@@ -9,10 +9,9 @@
 .hintergrund {
   position: relative;
   text-align: center;
-  color: white;
+  top: 0%;
+  right: 0%
 }
-
-
 
 /* Top right text */
 .top-right {
@@ -157,16 +156,16 @@ a.two {
 color:#00FF00;
 text-decoration:none;
 font-family: 'Courier New',Arial;
-font-size: 16px;
+font-size: 14px;
 font-weight: lighter;
 }
 
 /* mouse over link */
 a.two:hover {
-  color: #4e23ff;
+  color: #778dff;
   text-decoration:none;
   font-family: 'Courier New',Arial;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: lighter;
 }
 
@@ -174,16 +173,15 @@ a.two:hover {
 /* Centered text */
 .centered {
   position: absolute;
-  top: 11%;
+  top: 14.25%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
 .centered2 {
-  position: relative;
+  position: absolute;
   top: 78%;
-  left: 50%;
-  transform: translate(-50%, -1000%);
+  left: 25%;
 }
 
 a.one {
@@ -195,7 +193,7 @@ font-weight: lighter;
 }
 /* mouse over link */
 a.one:hover {
-  color: #4e23ff;
+  color: #778dff;
   text-decoration:none;
   font-family: 'Courier New',Arial;
   font-size: 16px;
@@ -204,14 +202,13 @@ a.one:hover {
 
 
 .centered3 {
-  position: relative;
-  top: 95%;
-  left: 50%;
-  transform: translate(-50%, -650%);
+  position: absolute;
+  top: 90%;
+  left: 25%;
 }
 
 a.four {
-color:#4e23ff;
+color:#778dff;
 text-decoration:none;
 font-family: 'Courier New',Arial;
 font-size: 13px;
@@ -235,7 +232,7 @@ position: relative;
 div.lyrics {
 width:      100%;
   height:     100%; 
-  z-index:    10;
+  z-index:    -1;
   top:        0; 
   left:       0; 
   position:   fixed; 
@@ -271,9 +268,9 @@ width:      100%;
 <a class="three" href="https://www.twitch.tv/amygdala_amara"target="_blank"><img class="twitch2" src="twitch2.png"  width="30" height="30"></a></div>
 
 
-  <div class="bottom-right"><div class="absolute"><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">requests:<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a></div></div>
+  <div class="bottom-right"><div class="absolute"><span style="font-size:14px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">requests:<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a></div></div>
   
-  <div class="centered"><h2 style="visibility:hidden">{ margin-top: 10px; }</h2><h1><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>amygdala_amara</center></h1>
+  <div class="centered"><h2 style="visibility:hidden"></h2><h1><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>amygdala_amara</center></h1>
 </div>
 
   <div class="centered2"><center><a class="one" href="https://ffm.to/amygdala_amara"target="_blank"> _NEW SONG </a> 
@@ -284,11 +281,11 @@ width:      100%;
 </center></div>
 </div>
 
-  <div class="centered3"><h2><span style="font-size:13px"><span style="color:#4e23ff"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>new single "We Can't Be the Judged Ones, If There's No One to Judge Us" out on 06/26 <br> 
+  <div class="centered3"><h2><span style="font-size:13px"><span style="color:#778dff"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>new single "We Can't Be the Judged Ones, If There's No One to Judge Us" out on 06/26 <br> 
 --><a class="four" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"> pre-save! </a><-- </center></h2></div>
 
 
-<div class="about"><img src="lila.png" align="right" width="289px" height="355px" hspace=20><p class="about2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right">about amygdala_amara</h2><p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">vdhssahdahkuf shfhaifiaufoiaehfo feuzgfuzwauhdiuoawj sfjhiuefhiuahfiueh fuhseiufiueshf sfuhseiufhiuehf<br>hbfsebfewbf efzwefuzgewfe fuzwegfuzewgzf efuzgweuzfg uzegfuzweg<br>bfzeg efewzguzwe ewufhewgi ehfhe<br>ufuzegzuewg wezufwefgz euzgfuzwegzuf weufzuwegzu ezgfuzwegzu ezuewggwzg efzweguzg ezfgzwuegfzu<br>euzrguwgr wegfweg zwegrgw3</p></p></div>
+<div class="about"><img src="lila.png" align="right" width="289px" height="355px" hspace=20><p class="about2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right">about amygdala_amara</h2><p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">amygdala_amara is a musician from berlin, who started making<br>alternative pop music, because studying medicine left too much free<br>space in her time squedule. It's also rumored, that she doesn't have in<br>fact too much time, but too much struggle making music and not<br>failing the exams, but the music thing is much more fun.</p></p></div>
 
 
 
