--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
   text-align: center;
 }
 
-
-
 /* Top right text */
 .top-right {
   position: absolute;
@@ -181,7 +179,9 @@ a.two:hover {
 .centered2 {
   position: absolute;
   top: 78%;
-  left: 25%;
+  left: 15%;
+  right: 15%;
+text-align: center;
 }
 
 a.one {
@@ -203,8 +203,10 @@ a.one:hover {
 
 .centered3 {
   position: absolute;
-  top: 90%;
-  left: 25%;
+  top: 79%;
+    left: 15%;
+  right: 15%;
+text-align: center;
 }
 
 a.four {
@@ -279,11 +281,11 @@ width:      100%;
 <a class="one" href="https://www.amazon.de/Sweet-Demon-amygdala_amara/dp/B08951QFCW/ref=sr_1_1?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=amygdala_amara&qid=1591103093&sr=8-1"target="_blank"> /amazon music/ </a>
 <a class="one" href="https://music.youtube.com/channel/UCMAxL753zYWHUjJMRNLlPPQ"target="_blank">'youtube music'</a>
 </center></div>
+
+
+  <div class="centered3"><center><h2><span style="font-size:13px"><span style="color:#778dff"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">new single "We Can't Be the Judged Ones, If There's No One to Judge Us" out on 06/26 <br> 
+--><a class="four" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"> pre-save! </a><-- </h2></center></div>
 </div>
-
-  <div class="centered3"><h2><span style="font-size:13px"><span style="color:#778dff"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><center>new single "We Can't Be the Judged Ones, If There's No One to Judge Us" out on 06/26 <br> 
---><a class="four" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"> pre-save! </a><-- </center></h2></div>
-
 
 <div class="about"><img src="lila.png" align="right" width="289px" height="355px" hspace=20><p class="about2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right">about amygdala_amara</h2><p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">amygdala_amara is a musician from berlin, who started making<br>alternative pop music, because studying medicine left too much free<br>space in her time squedule. It's also rumored, that she doesn't have in<br>fact too much time, but too much struggle making music and not<br>failing the exams, but the music thing is much more fun.</p></p></div>
 
