--- a/experimentieren.html
+++ b/experimentieren.html
@@ -248,7 +248,7 @@ width:      100%;
 
 
 <div class="hintergrund">
-<img class="profilbild" src="hintergrund1.png" alt="…" width="100%" height="100%">
+<img class="profilbild" src="hintergrund1.png" width="100%" height="100%">
 
  
  
