--- a/index.html
+++ b/index.html
@@ -184,11 +184,6 @@ position: absolute;
 z-index:1
   }  
   
-  .bottom-right {
-  position: absolute;
-  bottom: 1%;
-  right: 1.25%;
-}
 
 div.absolute {
   position: absolute;
@@ -202,7 +197,7 @@ div.absolute {
 color:#00FF00;
 text-decoration:none;
 font-family: 'Courier New',Arial;
-font-size: 14px;
+font-size: 12px;
 font-weight: lighter;
 }
 
@@ -211,24 +206,35 @@ a.two:hover {
   color: #778dff;
   text-decoration:none;
   font-family: 'Courier New',Arial;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: lighter;
 }
 
-  div.lyrics {
-width:      100%;
-  height:     100%; 
-  z-index:    -1;
-  top:        0; 
-  left:       0; 
-  position:   fixed; 
-  pointer-events: none;
-}
 
 .about {
 position: relative;
   right: 0px;
   top: 80px;
+}
+
+
+ .sweetdemon {
+position: relative;
+  left: 0px;
+  top: 80px;
+}
+
+.ghibli {
+position: relative;
+  left: -337px;
+  top: 290px;
+}
+
+
+.contact {
+position: relative;
+  right: 0px;
+  top: 520px;
 }
 </style>
 </head>
@@ -265,93 +271,23 @@ position: relative;
 --><a class="four" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"> pre-save! </a><-- </h2></center></div>
 </div>
   
-  <div class="bottom-right"><div class="absolute"><span style="font-size:14px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">requests:<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a></div></div>
-  
   
 </div>
 
 
 
 
-<p><div class="about"><img src="lila.png" align="right" width="290px" height="292px" hspace=20><p class="about2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right">about amygdala_amara</h2><p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>amygdala_amara is a musician from berlin, <br>who started makingalternative pop music,<br> because studying medicine left too much free<br> space in her time squedule. It's also rumored,<br> that she doesn't have infact too much time, but<br> too much struggle making music and not<br>failing the exams, but the music thing is<br> much more fun.</p></p></div></p>
+<div class="about"><img src="lila.png" align="right" width="290px" height="292px" hspace=20><p class="about2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right">about amygdala_amara</h2><p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>amygdala_amara is a musician from berlin, <br>who started makingalternative pop music,<br> because studying medicine left too much free<br> space in her time squedule. It's also rumored,<br> that she doesn't have infact too much time, but<br> too much struggle making music and not<br>failing the exams, but the music thing is<br> much more fun.</p></p></div>
 
 
 
+<div class="sweetdemon"><img src="sweetdemon.png" align="left" width="300px" height="300px" hspace=20><p class="sweetdemon2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="left">Sweet Demon</h2><p align="left"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>her first ever released single</p></p></div>
+
+<div class="ghibli"><img src="ghibli.png" align="left" width="300px" height="300px" hspace=20><p class="ghibli2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="left">We Can't Be the Judged Ones, If There's No One to Judge US</h2><p align="left"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>her second single will be released<br>on 6/26</p></p></div>
+
+<div class="contact"><img src="coverblackgreen.jpg" align="right" width="290px" height="292px" hspace=20><p class="about2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right">contact</h2><p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>for any requests mail me:<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a></p></p></div>
 
 
-<div class= "lyrics"><marquee height="100%" direction="down"> <span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">
-<div style="text-indent:10px;">h1.verse1{</div>
-cut;<br>
-your throat by my tongue;<br>
-you got sober lungs;<br>
-and i make you feel;<br>
-
-<div style="text-indent:10px;">the highs and then the palest lows;</div>
-i lift you up; i punch you down;<br>
-baby;<br>
-}<br>
-<div style="text-indent:10px;">h1.bridge1{</div>
-tender boy, make me feel you leave;<br> 
-i cry two oceans, you traverse them for me;<br>
-and when you just swim fast enough;<br>
-my holy hand will rise;<br>
-}<br>
-<div style="text-indent:10px;">h1.chorus{</div>          
-when i take your mind;<br>
-and i make it mine;<br>
-
-<div style="text-indent:10px;">cause I heard what you said;</div>
-to the girl that you met;<br>
-
-<div style="text-indent:10px;">if you fight back, if you, you fight back;</div>
-boy boy;<br>
-
-<div style="text-indent:10px;">then I come around;</div> 
-at your mama’s house;<br>
-on your safest ground;<br>
-
-<div style="text-indent:10px;">and I will defend;</div>
-
-<div style="text-indent:10px;">back up!;</div>
-} <br>
-<div style="text-indent:10px;">h1.verse2{</div>
-my hands;<br>
-to forget everything;<br>
-they just toughed heaven;<br> 
-and they toughed your skin;<br>
-
-<div style="text-indent:10px;">deepthroat your feelings in a fight;</div>
-save ‘em in mind for better times;<br>
-i bought you flowers;<br>
-
-<div style="text-indent:10px;">what if we both just have like a chill night … together … watching them die?;</div>
-wouldn’t that be romantic?;<br>
-} <br>
-<div style="text-indent:10px;">h1.bridge2{</div>
-tender boy, make me feel you leave; <br>
-i burn the ground and you get burned by me;<br>
-and on a good day, if i feel like it;<br>
-my holy hand will rise;<br>
-} <br>
-<div style="text-indent:10px;">h1.chorus{</div>
-when i take your mind;<br> 
-and i make it mine;<br>
-
-<div style="text-indent:10px;">cause I heard what you said;</div>
-to the girl that you met;<br> 
-
-<div style="text-indent:10px;">if you fight back, if you, you fight back;</div>
-boy boy;<br>
-
-<div style="text-indent:10px;">then I come around;</div> 
-at your mama’s house;<br>
-on your safest ground;<br>
-
-<div style="text-indent:10px;">and i will defend;</div>
-
-<div style="text-indent:10px;">back up!;</div>
-}<br>
-</marquee></div>
 
 
 
