--- a/index.html
+++ b/index.html
@@ -58,6 +58,22 @@ a.one:hover {
   font-weight: lighter;
 }
 
+a.five {
+color:#00FF00;
+text-decoration:none;
+font-family: 'Courier New',Arial;
+font-size: 12px;
+font-weight: lighter;
+}
+/* mouse over link */
+a.five:hover {
+  color: #778dff;
+  text-decoration:none;
+  font-family: 'Courier New',Arial;
+  font-size: 12px;
+  font-weight: lighter;
+}
+
 .centered {
   position: absolute;
   top: 12%;
@@ -234,7 +250,7 @@ position: relative;
 .contact {
 position: relative;
   right: 0px;
-  top: 520px;
+  top: 430px;
 }
 </style>
 </head>
@@ -281,9 +297,21 @@ position: relative;
 
 
 
-<div class="sweetdemon"><img src="sweetdemon.png" align="left" width="300px" height="300px" hspace=20><p class="sweetdemon2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="left">Sweet Demon</h2><p align="left"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>her first ever released single</p></p></div>
+<div class="sweetdemon"><img src="sweetdemon.png" align="left" width="300px" height="300px" hspace=20>
 
-<div class="ghibli"><img src="ghibli.png" align="left" width="300px" height="300px" hspace=20><p class="ghibli2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="left">We Can't Be the Judged Ones, If There's No One to Judge US</h2><p align="left"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>her second single will be released<br>on 6/26</p></p></div>
+
+<h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="left">Sweet Demon</h2>
+
+<p align="left"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>her first ever released single</p></p></div>
+
+<div class="ghibli"><img src="ghibli.png" align="left" width="300px" height="300px" hspace=20><p class="ghibli2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="left">We Can't Be the Judged Ones, If There's No One to Judge US</h2><p align="left"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>her second single will be released<br>on 6/26</p></p><br><br>
+
+<h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="left">music</h2>
+
+<p class="ghibli2"><p align="left"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>listen to her music on:<br><br><a class="five" href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF"target="_blank">  spotify  </a><a class="five" href="https://music.apple.com/de/artist/amygdala-amara/1513588735">  apple music  </a><a class="five" href="https://www.amazon.de/Sweet-Demon-amygdala_amara/dp/B08951QFCW/ref=sr_1_1?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=amygdala_amara&qid=1591103093&sr=8-1"target="_blank">  amazon music  </a><a class="five" href="https://music.youtube.com/channel/UCMAxL753zYWHUjJMRNLlPPQ"target="_blank">  youtube music  </a><br></p>
+
+</div>
+
 
 <div class="contact"><img src="coverblackgreen.jpg" align="right" width="290px" height="292px" hspace=20><p class="about2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right">contact</h2><p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>for any requests mail me:<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a></p></p></div>
 
